--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -29,8 +29,8 @@
                     <h5 class="mb-0">Navigation</h5>
                 </div>
                 <div class="list-group list-group-flush">
-                    <a href="#" class="list-group-item list-group-item-action active">Users table</a>
-                    <a href="#" class="list-group-item list-group-item-action">New User</a>
+                    <a href="#" class="list-group-item list-group-item-action active">Admin panel</a>
+                    <a href="/user" class="list-group-item list-group-item-action">User Panel</a>
                 </div>
             </div>
         </div>
